# JuicyFlock

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Shaders/: boids_build.comp  boids_clear.comp  boids_step.comp  fluid.frag  fluid.vert  particles.frag  particles.vert
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
docs/: TECHNICAL.md
